Comments H2 z-index issue.

--- a/src/scss/components/_comments.scss
+++ b/src/scss/components/_comments.scss
@@ -3,6 +3,7 @@
   margin-block-start: 0;
   position: relative;
   inset-block-start: .5rem;
+  z-index: -1;
 }
 
 .comments__list {
